--- a/webui/css/config/settings/input.scss
+++ b/webui/css/config/settings/input.scss
@@ -31,6 +31,7 @@ input[type="submit"][disabled] {
     padding-right: 1.3rem;
     border-radius: 16px;
     z-index: 2;
+    pointer-events: auto;
 }
 
 /* For tablet sizes and above */
